// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge request summary note component renders review note 1`] = `
<div>
  <article
    class="gl-border gl-mb-4 gl-rounded-base"
  >
    <header
      class="gl-display-flex gl-justify-content-space-between gl-p-4"
    >
      <h5
        class="gl-m-0"
      >
        Merge request change summary
      </h5>
      <time-ago-tooltip-stub
        class="gl-font-sm gl-text-gray-600 gl-white-space-nowrap"
        cssclass=""
        datetimeformat="DATE_WITH_TIME_FORMAT"
        time="created-at"
        tooltipplacement="top"
      />
    </header>
    <div
      class="gl-mb-4 gl-px-4"
    >
      <p
        class="gl-m-0"
      >
        AI content
      </p>
    </div>
    <footer
      class="gl--flex-center gl-border-t gl-px-4 gl-py-3"
    >
      <user-feedback-stub
        eventextradata="[object Object]"
        eventname="proposed_changes_summary"
        feedbacklinktext="Leave feedback"
        promptlocation=""
      />
      <div
        class="gl-ml-auto"
      />
    </footer>
  </article>
  <summary-note-stub
    summary="[object Object]"
    type="review_summary"
  />
</div>
`;

exports[`Merge request summary note component renders summary note 1`] = `
<div>
  <article
    class="gl-border gl-mb-4 gl-rounded-base"
  >
    <header
      class="gl-display-flex gl-justify-content-space-between gl-p-4"
    >
      <h5
        class="gl-m-0"
      >
        Merge request change summary
      </h5>
      <time-ago-tooltip-stub
        class="gl-font-sm gl-text-gray-600 gl-white-space-nowrap"
        cssclass=""
        datetimeformat="DATE_WITH_TIME_FORMAT"
        time="created-at"
        tooltipplacement="top"
      />
    </header>
    <div
      class="gl-mb-4 gl-px-4"
    >
      <p
        class="gl-m-0"
      >
        AI content
      </p>
    </div>
    <footer
      class="gl--flex-center gl-border-t gl-px-4 gl-py-3"
    >
      <user-feedback-stub
        eventextradata="[object Object]"
        eventname="proposed_changes_summary"
        feedbacklinktext="Leave feedback"
        promptlocation=""
      />
      <div
        class="gl-ml-auto"
      />
    </footer>
  </article>
</div>
`;
